Resolved multiple viewport issues and resolved mobile spacing on navbar

--- a/public/stylesheets/style.scss
+++ b/public/stylesheets/style.scss
@@ -141,7 +141,7 @@ label, input, {
 }
 
 #whitetext {
-  padding: 30px !important
+  padding: 10px !important
 }
 
 #description {
